--- a/app/src/main/res/layout/primary_secondary_list_item.xml
+++ b/app/src/main/res/layout/primary_secondary_list_item.xml
@@ -5,10 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/selectable_item_background">
 
     <TextView
         android:id="@+id/primaryText"
+        android:focusable="false"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_default"
@@ -22,6 +24,7 @@
 
     <TextView
         android:id="@+id/secondaryText"
+        android:focusable="false"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_list_rows"
@@ -35,6 +38,7 @@
         tools:text="Secondary Text • Ternary Text" />
 
     <View
+        android:focusable="false"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
