--- a/app/src/main/res/layout/primary_secondary_list.xml
+++ b/app/src/main/res/layout/primary_secondary_list.xml
@@ -4,12 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:focusable="false">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/primarySecondaryList"
-        android:focusable="false"
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:listitem="@layout/primary_secondary_list_item"
