--- a/app/src/main/res/layout/primary_secondary_list.xml
+++ b/app/src/main/res/layout/primary_secondary_list.xml
@@ -8,6 +8,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/primarySecondaryList"
+        android:background="@drawable/no_background_focused"
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:listitem="@layout/primary_secondary_list_item"
